--- a/options.html
+++ b/options.html
@@ -774,7 +774,13 @@ $(document).change(function(){
                             <div class="checkbox">
                                 <label>
                                     <input type="checkbox" id="click_expand_thumbnail" />
-                                    <span>Click thumbnailed image to expand</span>
+                                    <span>Click to expand thumbnailed images</span>
+                                </label>
+                            </div>
+                            <div class="checkbox">
+                                <label>
+                                    <input type="checkbox" id="batch_uploader" />
+                                    <span>Enable batch uploader</span>
                                 </label>
                             </div>
                             <!--
@@ -785,6 +791,17 @@ $(document).change(function(){
                                 </label>
                             </div>
                             -->
+                        </div>
+                    </section>
+                    <section>
+                        <h3>Users</h3>
+                        <div>
+                            <div class="checkbox">
+                                <label>
+                                    <input type="checkbox" id="user_notes" />
+                                    <span>User notes</span>
+                                </label>
+                            </div>
                         </div>
                     </section>
 				</div>
