--- a/options.html
+++ b/options.html
@@ -872,6 +872,10 @@ function saveConfig(){
                                     <span>Enable user highlighing for posts</span>
                                 </label>
                             </div>
+                            <div class="checkbox">
+                                    <input type="checkbox" id="highlight_tc" />
+                                    <span>Highlight the TC's username color <input type="text" id="tc_highlight_color" style="width: 50px" /></span>
+                            </div>
                         </div>
                     </section>
                     <section>
