--- a/background.html
+++ b/background.html
@@ -39,6 +39,7 @@ function handleContext(info){
     }
 }
 function getDrama() {
+    console.log('getting dramalinks');
     var dramas;
     var xhr = new XMLHttpRequest();
 	xhr.open("GET", "http://wiki.endoftheinter.net/index.php?title=Dramalinks/current&action=raw&section=0&maxage=30", true);		
@@ -119,6 +120,7 @@ chrome.extension.onRequest.addListener(
                 }
                 break;
             case "dramalinks":
+                console.log('need dramalinks');
                 var time = parseInt(new Date().getTime()) + (1800 * 1000);
                 if(drama.time && (drama.time < time)){
                     console.log('returning cached dramalinks. cache time: ' + drama.time + ' -> ' + time);
