--- a/App/src/popup.html
+++ b/App/src/popup.html
@@ -83,7 +83,7 @@ h1{
 <form name="lue_search" action="http://boards.endoftheinter.net/search.php" method="get" target="_new">
 <input type="text" name="s_aw" style="width: 100%">
 <input type="text" name="board" value="42" style="display: none">
-<input type="submit" name="submit" value="Submit" style="display: none">
+<input type="submit" name="submit" value="Submit" style="position: fixed; top: -200px;">
 </form>
 <form name="boards"><!--action="http://boards.endoftheinter.net/showtopics.php" method="get" target="_new"-->
 <select id="board_select" name="board" style="width: 100%">
