merge, minor cleanups

--- a/App/src/popup.html
+++ b/App/src/popup.html
@@ -75,6 +75,13 @@ h1{
 .warn{
 	font-size: 12px;
 }
+.show_hidden{
+    float: right;
+    cursor: hand;
+    font-size: 12px;
+    font-style: normal;
+    padding-right: 5px;
+}
 </style>
 <script type="text/javascript" src="/App/src/popup.js"></script>
 </head>
