--- a/options.html
+++ b/options.html
@@ -627,6 +627,12 @@ span.desc {
 							</div>
                             <div class="checkbox">
 								<label>
+									<input type="checkbox" id="context_menu" />
+									<span>Show the right click menu (enable/disable extension or restart browser to take effect)</span>
+								</label>
+							</div>
+                            <div class="checkbox">
+								<label>
 									<input type="checkbox" id="dramalinks" />
 									<span>Show the dramalinks ticker</span>
 								</label>
@@ -967,6 +973,12 @@ span.desc {
                                 <label>
                                     <input type="checkbox" id="post_title_notification" />
                                     <span>Show unread posts in page title</span>
+                                </label>
+                            </div>
+                            <div class="checkbox">
+                                <label>
+                                    <input type="checkbox" id="autoscroll_livelinks" />
+                                    <span>Automatically scroll down on livelinks post</span>
                                 </label>
                             </div>
                             <div class="checkbox">
