livelinks scroll popup integration

--- a/App/src/popup.html
+++ b/App/src/popup.html
@@ -92,6 +92,7 @@ h1{
 <input type="text" name="board" value="42" style="display: none">
 <input type="submit" name="submit" value="Submit" style="position: fixed; top: -200px;">
 </form>
+<span id="info_test_display"></span>
 <form name="boards"><!--action="http://boards.endoftheinter.net/showtopics.php" method="get" target="_new"-->
 <select id="board_select" name="board" style="width: 100%">
 <option value="-1">
