--- a/options.html
+++ b/options.html
@@ -978,7 +978,7 @@ span.desc {
                             <div class="checkbox">
                                 <label>
                                     <input type="checkbox" id="autoscroll_livelinks" />
-                                    <span>Automatically scroll down on livelinks post</span>
+                                    <span>Automatically scroll down on livelinks post (activate in popup)</span>
                                 </label>
                             </div>
                             <div class="checkbox">
