--- a/options.html
+++ b/options.html
@@ -1008,6 +1008,12 @@ span.desc {
                             </div>
                             <div class="checkbox">
                                 <label>
+                                    <input type="checkbox" id="hide_deleted" />
+                                    <span>[Mod] Hide messages that have been deleted by default</span>
+                                </label>
+                            </div>
+                            <div class="checkbox">
+                                <label>
                                     <input type="checkbox" id="loadquotes" />
                                     <span>Click [quoted text omitted] to load quote</span>
                                 </label>
