moving tags to the end of a topic topic halfway works
every other topic with tags gets its tags div id changed to fl instead
of fr. not sure why.
also needs more spacing, looks bad

--- a/options.html
+++ b/options.html
@@ -616,6 +616,12 @@ span.desc {
 							</div>
                             -->
                             <div class="checkbox">
+                <label>
+                  <input type="checkbox" id="append_tags" />
+                  <span>Append tags to the end of the topic title</span>
+                </label>
+              </div>
+                            <div class="checkbox">
 								<label>
 									<input type="checkbox" id="short_title" />
 									<span>Shorten page title (remove "End of the Internet")</span>
