add sonicmax changes

--- a/options.html
+++ b/options.html
@@ -725,11 +725,7 @@ span.desc {
 									<input type="checkbox" id="sys_notifications" />
 									<span>Show notifications about ChromeLL events (when updated, etc)</span>
 								</label>
-							</div>
-                            <div class="checkbox">
-									<input type="checkbox" id="close_notifications" />
-									<span>Close notifications after&nbsp;<input type="text" id="close_notification_time" style="width: 20px" value="5" />&nbsp;seconds</span>
-							</div>
+							</div>   
 						</div>
 					</section>
                     <section>
@@ -1344,7 +1340,8 @@ span.desc {
                             Transloader code by <a href="https://boards.endoftheinter.net/showmessages.php?board=42&topic=7817173">Milan</a><br />
                             Some dramalinks code is based off of an extension by <a href="http://endoftheinter.net/profile.php?user=10347">freeman</a><br />
                             "Load [quoted text omitted] on click" code originally by <a href="http://endoftheinter.net/profile.php?user=10295">headbanger</a><br />
-                            Remove unneeded links from the menubar based on code by <a href="http://endoftheinter.net/profile.php?user=5563">citizenray</a>
+                            Remove unneeded links from the menubar based on code by <a href="http://endoftheinter.net/profile.php?user=5563">citizenray</a><br />
+														Updated for chrome.notifications API by <a href="http://endoftheinter.net/profile.php?user=5599">sonicmax</a>
                         </div>
                     </section>
                     <section>
