--- a/App/src/popup.html
+++ b/App/src/popup.html
@@ -30,6 +30,7 @@ h1{
 }
 .links{
     padding-bottom: 20px;
+		font-size: 8px;
 }
 .rm_num{
     position: relative;
@@ -87,185 +88,72 @@ h1{
 </head>
 <body>
 <div class="info">search LUE</div>
-<form name="lue_search" action="http://boards.endoftheinter.net/search.php" method="get" target="_new">
-<input type="text" name="s_aw" style="width: 100%">
-<input type="text" name="board" value="42" style="display: none">
-<input type="submit" name="submit" value="Submit" style="position: fixed; top: -200px;">
+<form name="lue_search" action="http://boards.endoftheinter.net/topics/LUE?q=" method="get" target="_new">
+<input type="text" name="q" style="width: 100%">
+</form>
+<div class="info">User Profile (enter User ID)</div>
+<form name="lue_search" action="http://endoftheinter.net/profile.php?user=" method="get" target="_new">
+<input type="number" name="user" min="1" style="width: 100%">
 </form>
 <span id="info_test_display"></span>
-<form name="boards"><!--action="http://boards.endoftheinter.net/showtopics.php" method="get" target="_new"-->
+<form name="boards"><!--action="http://boards.endoftheinter.net/" method="get" target="_new"-->
 <select id="board_select" name="board" style="width: 100%">
 <option value="-1">
-Select a Board</option>
-<option value="42">
-Life, the Universe and Everything </option>
-<option value="444">
-Humans Anonymous </option>
-<option value="58">
-Mostly Harmless </option>
-<option value="51">
+Select a Tag</option>
+<option value="topics/LUE">
+LUE </option>
+<option value="topics/Anonymous">
+Anonymous </option>
+<option value="topics/Serious">
+Serious </option>
+<option value="topics/News">
+News </option>
+<option value="topics/Politics">
+Politics </option>
+<option value="topics/Technology">
+Technology </option>
+<option value="topics/Gaming">
+Gaming </option>
+<option value="topics/Pipe_Mania">
 Pipe Mania </option>
-<option value="73">
+<option value="topics/Fitness">
 Fitness </option>
-<option value="419">
-LL Mart </option>
-<option value="75">
+<option value="topics/Marketplace">
+Marketplace </option>
+<option value="topics/Music">
 Music </option>
-<option value="54494">
-Referral Mania </option>
-<option value="74">
-Relation Ship </option>
-<option value="78">
-Requests </option>
-<option value="76">
+<option value="topics/Sports">
 Sports </option>
-<option value="77">
+<option value="topics/Strong_Homo">
 Strong Homo </option>
-<option value="46">
+<option value="topics/Anime">
 Anime </option>
-<option value="47">
-Computers </option>
-<option value="30000">
-Flamers </option>
-<option value="71">
-Homework </option>
-<option value="48">
-Media and Entertainment </option>
-<option value="69">
-Porn </option>
-<option value="53">
-Hentai Paradise </option>
-<option value="55">
-Requests </option>
-<option value="43">
-Peer to Peer </option>
-<option value="70">
-Requests </option>
-<option value="52">
-Video Games </option>
-<option value="44">
-ROMs </option>
-<option value="56">
-Complaints Department </option>
-<option value="45">
+<option value="topics/Pornography">
+Pornography </option>
+<option value="topics/Complaints">
+Complaints</option>
+<option value="topics/Site_Suggestions">
 Site Suggestions </option>
-<option value="1">
-The Land of Lost Topics </option>
-<option value="60">
-Cooler People </option>
-<option value="61">
-Coolest People </option>
-<option value="62">
-Coolest(er) People </option>
-<option value="63">
-Absolute Zero </option>
-<option value="-2583092">
+<option value="topics/Flower_Power">
 Flower Power </option>
-<option value="2600">
-LUEtari 2600 </option>
-<option value="-85">
-Moderator Social </option>
-<option value="-86">
-Suspensions and Bans </option>
-<option value="-84">
-The Cheese Factory </option>
-<option value="54">
-LUEshi </option>
-<option value="38">
-Meat </option>
-<option value="57">
+<option value="topics/Arcade">
+Arcade </option>
+<option value="showmessages.php?topic=8377893">
 Suicide </option>
-<option value="8675309">Jenny</option><option value="
-662">
-IBKM</option><option value="
-545">
-The Board of Hopeless Fate</option><option value="17074">
-AnotherGamer's Pit of...</option><option value="-2700">
-I Didn't Win!</option><option value="
-5749">
-Starcraft (board)</option><option value="
-1234">
-Guam</option><option value="
-1691">
-EUGWNGOPWTMDC</option><option value="
-2112">
-The Bethlehem Disco</option><option value="
-100">
-Alexander's Place</option><option value="
-1024">
-The RevoLUEtion</option><option value="
-98">
-Jawsome.</option><option value="
-8000">
-LUE Radio</option><option value="
-19">
-Trapped in a Fox Suit</option><option value="
-241">
-Treasure Chest Of Lust...</option><option value="
-9999">
-Elder Scrolls Cove</option><option value="
-800">
-Jelly Soup's Toybox</option><option value="
-333">
-S.S. MORE POWERFUL...</option><option value="
-777">
-Top Secret Area</option><option value="
-917">
-The Knights TempLUEr</option><option value="
-555">
-Another Castle</option><option value="
-6191">
-Use Bombs Wisely</option><option value="
-328">
-MRG Land</option><option value="
-6700">
-Mystikal Bomb</option><option value="
-152">
-Panel de Pon</option><option value="
--666">
-Shahin</option><option value="
-1908">
-I HEART U</option><option value="
-1999">
-CS 1.6 League</option><option value="
-5674684">
-LUE Funmaps</option><option value="
-204">
-Mostly Harmless</option><option value="
-1338">
-The Back-Up Internets</option><option value="
-255">
-Game Over</option><option value="
-24">
-Counter-Terrorist Unit</option><option value="
-123321">
-Lawrence</option><option value="
-11111101">
-The Starlight Theater</option><option value="
-1027">
-Zoot Allures</option><option value="
-268170">
-The Bebop</option><option value="
-212">
-Jesus Ranch</option><option value="
-524">Without a Cause's Lair...</option>
-<option value="
-604753">
-HaLUE</option><option value="
-18">The World That I Know</option>
+<option value="tag.php?tag=">
+Tag Control Panel</option>
 </select>
 </form>
 <div id="js_insert"></div>
 <br />
-<div class="info">quick links</div><center><div class="links">
-<a href="http://boards.endoftheinter.net/showtopics.php?board=42" target="_new">LUE</a> |
-<a href="http://boards.endoftheinter.net/showtopics.php?board=51" target="_new">PM</a> |
-<a href="http://boards.endoftheinter.net/showtopics.php?board=58" target="_new">MH</a> |
-<a href="http://boards.endoftheinter.net/showtopics.php?board=444" target="_new">HA</a> |
-<a href="http://boards.endoftheinter.net/history.php" id="a_msg_history" target="_new">HIST</a>
+<div class="info">quick links</div><center><div class="links"><br>
+<a href="http://endoftheinter.net/inbox.php" target="_new">Inbox</a> |
+<a href="http://endoftheinter.net/shop.php" target="_new">Shop</a> |
+<a href="http://images.endoftheinter.net/imagemap.php" target="_new">Images</a> |
+<a href="http://boards.endoftheinter.net/history.php" id="a_msg_history" target="_new">Hist.</a>
 </div>
 </center>
-<div id="doptions"><div class="line"></div><a href="#" id="options">Options</a></div><!--
+<div id="doptions"><div class="line"></div><a href="#" id="options"> </a></div><!--
 <hr>
 <div class="clisttitle">online:</div>
 <div class="chatlist" style="font-size: 12px; color: #000"></div>
