--- a/options.html
+++ b/options.html
@@ -1336,12 +1336,13 @@ span.desc {
                     <section>
                         <h3>About</h3>
                         <div>
-                            Written by <a href="http://endoftheinter.net/profile.php?user=18394">chairface</a><br />
+                            Written by <a href="https://endoftheinter.net/profile.php?user=18394">chairface</a><br />
                             Transloader code by <a href="https://boards.endoftheinter.net/showmessages.php?board=42&topic=7817173">Milan</a><br />
-                            Some dramalinks code is based off of an extension by <a href="http://endoftheinter.net/profile.php?user=10347">freeman</a><br />
-                            "Load [quoted text omitted] on click" code originally by <a href="http://endoftheinter.net/profile.php?user=10295">headbanger</a><br />
-                            Remove unneeded links from the menubar based on code by <a href="http://endoftheinter.net/profile.php?user=5563">citizenray</a><br />
-														Updated for chrome.notifications API by <a href="http://endoftheinter.net/profile.php?user=5599">sonicmax</a>
+                            Some dramalinks code is based off of an extension by <a href="https://endoftheinter.net/profile.php?user=10347">freeman</a><br />
+                            "Load [quoted text omitted] on click" code originally by <a href="https://endoftheinter.net/profile.php?user=10295">headbanger</a><br />
+                            Remove unneeded links from the menubar based on code by <a href="https://endoftheinter.net/profile.php?user=5563">citizenray</a><br />
+														Updated for chrome.notifications API by <a href="https://endoftheinter.net/profile.php?user=5599">sonicmax</a><br />
+							Thumbnail expansion fixed and enhanced by <a href="https://endoftheinter.net/profile.php?user=1332">xDrVonScottx</a>
                         </div>
                     </section>
                     <section>
