--- a/options.html
+++ b/options.html
@@ -1342,7 +1342,7 @@ span.desc {
                             "Load [quoted text omitted] on click" code originally by <a href="https://endoftheinter.net/profile.php?user=10295">headbanger</a><br />
                             Remove unneeded links from the menubar based on code by <a href="https://endoftheinter.net/profile.php?user=5563">citizenray</a><br />
 														Updated for chrome.notifications API by <a href="https://endoftheinter.net/profile.php?user=5599">sonicmax</a><br />
-							Thumbnail expansion fixed and enhanced by <a href="https://endoftheinter.net/profile.php?user=1332">xDrVonScottx</a>
+							Thumbnail expansion (and other bugs) fixed and enhanced by <a href="https://endoftheinter.net/profile.php?user=1332">xDrVonScottx</a>
                         </div>
                     </section>
                     <section>
